src/test/resources/extension/valid/const/constTypeWriteElem.awsl
begin

newtype Tuple is
    int a;
    char b;
end

const Tuple t = Tuple(1, 'b');
println t.a;
println t.b;

end