src/test/resources/extension/invalid/newtype/typeSameName2.awsl
begin

newtype Copy is
    int value;
end

newtype Copyable is union
    Copy of (char value);
end

exit 0;

end